@@ -10,7 +10,10 @@ bobcat (5.05.00)
   * Added descriptions of the members Arg::LongOption::longName and
     Arg::LongOption::optionChar to the FBB::Arg man-page
     
- -- Frank B. Brokken <f.b.brokken@rug.nl>  Fri, 22 May 2020 18:25:04 +0200
+  * Fixed a bug in DateTime that broke rfc2822() and rfc3329() when DST was
+    acitve. 
+
+ -- Frank B. Brokken <f.b.brokken@rug.nl>  Sat, 23 May 2020 15:25:17 +0200
 
 bobcat (5.04.01)
 
